--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.20.0'
     implementation 'org.jetbrains.anko:anko-common:0.10.8'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
