--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="iteso.mx.itesogram">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".ItesogramApplication"
         android:allowBackup="true"
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ActivityLogin"
+
+        <activity android:name=".ActivityMain"></activity>
+        <activity
+            android:name=".ActivityLogin"
             android:theme="@style/AppThemeNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity">
-        </activity>
-        <activity android:name=".ActivitySaveInParse"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".ActivitySaveInParse" />
     </application>
 
 </manifest>
